--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -19,6 +21,7 @@
     "embla-carousel-react": "^8.0.4",
     "eslint": "^8.50.0",
     "eslint-config-next": "latest",
+    "framer-motion": "^11.2.4",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
